--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.68.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
+    "react-type-animation": "^3.2.0",
     "redux-saga": "^1.4.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
