--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "react-type-animation": "^3.2.0",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.4.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
