--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
@@ -36,10 +37,12 @@
     "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.4.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
